--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-sdlgjsldakgnslkgsakl
+<h1>Ömer Faruk ŞEN</h1>
+<h2>Hakkımda</h2>
+<p>Ankarada yaşıyorum özel bir firmada çalışıyorum. İş dışında zamanımı hobilerime ayırıyorum</p>
+<h2>Hobilerim</h2>
+<p>Satranç oynamak, Basketbol oynamak, yüzmek</p>
+<h3>Satranç</h3>
+<p>Satranç çok keyif aldığım bir oyun lakin ileri düzeyde değilim henüz</p>
