--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <h1>Ömer Faruk ŞEN</h1>
 <h2>Hakkımda</h2>
+<!--Ben kimim -->
 <p>Ankarada yaşıyorum özel bir firmada çalışıyorum. İş dışında zamanımı hobilerime ayırıyorum</p>
+<!-- Yorum satırım burası-->
 <h2>Hobilerim</h2>
+<!--Hobilerimden bahsetmek istediğim yer-->
 <p>Satranç oynamak, Basketbol oynamak, yüzmek</p>
 <h3>Satranç</h3>
 <p>Satranç çok keyif aldığım bir oyun lakin ileri düzeyde değilim henüz</p>
