--- a/Odev 2/index.html
+++ b/Odev 2/index.html
@@ -1,5 +1,24 @@
 <h1>Ömer Faruk ŞEN</h1>
-<img src="https://picsum.photos/200/300" alt="">
+<img src="https://picsum.photos/200/300" alt="Kolay bir resim eklemek istedim">
 <h2>Hakkımda</h2>
 <!--Ben kimim -->
 <p>Ankarada yaşıyorum özel bir firmada çalışıyorum. İş dışında zamanımı hobilerime ayırıyorum</p>
+<!--Listeler-->
+<ol>
+    <li><h4>Diziler</h4></li>
+    <ul>
+        <li>Breaking Bad</li>
+        <li>Prison Break</li>
+    </ul>
+    <li><h4>Filmler</h4></li>
+    <ul>
+        <li>Spiderman</li>
+        <li><a href="https://www.imdb.com/title/tt0371746/ratings/?ref_=tt_ov_rt">Iron Man</a></li>
+    </ul>
+    <li><h4>Kitaplar</h4></li>
+    <ul>
+        <li><a href="https://www.goodreads.com/book/show/20695336-zaman-n-k-sa-tarihi?from_search=true&from_srp=true&qid=LUFrKwxnE2&rank=1">Zamanın Kısa Tarihi</a> </li>
+        <li>Zamanın Daha Kısa Tarihi</li>
+        <li>Karadelikler</li>
+    </ul>
+</ol>
