--- a/Odev 2/index.html
+++ b/Odev 2/index.html
@@ -7,18 +7,24 @@
 <ol>
     <li><h4>Diziler</h4></li>
     <ul>
-        <li>Breaking Bad</li>
-        <li>Prison Break</li>
+        <li><em>Breaking Bad</em></li>
+        <li><em>Prison Break</em></li>
     </ul>
     <li><h4>Filmler</h4></li>
     <ul>
-        <li>Spiderman</li>
+        <li><em>Spiderman</em></li>
         <li><a href="https://www.imdb.com/title/tt0371746/ratings/?ref_=tt_ov_rt">Iron Man</a></li>
     </ul>
     <li><h4>Kitaplar</h4></li>
     <ul>
         <li><a href="https://www.goodreads.com/book/show/20695336-zaman-n-k-sa-tarihi?from_search=true&from_srp=true&qid=LUFrKwxnE2&rank=1">Zamanın Kısa Tarihi</a> </li>
-        <li>Zamanın Daha Kısa Tarihi</li>
-        <li>Karadelikler</li>
+        <li><em>Zamanın Daha Kısa Tarihi</em></li>
+        <li><em>Karadelikler</em></li>
     </ul>
 </ol>
+<!-- Yorum satırım burası-->
+<h2>Hobilerim</h2>
+<!--Hobilerimden bahsetmek istediğim yer-->
+<p>Satranç oynamak, Basketbol oynamak, yüzmek</p>
+<h3>Satranç</h3>
+<p>Satranç çok keyif aldığım bir oyun lakin ileri düzeyde değilim henüz</p>
